@@ -19,7 +19,7 @@ public class TwoAtomsModel extends MPModel {
 
     public TwoAtomsModel( IClock clock ) {
 
-        molecule = new DiatomicMolecule( new ImmutableVector2D( 335, 390 ) ); //TODO revisit this and make sure it's accounted for in canvas layout
+        molecule = new DiatomicMolecule( new ImmutableVector2D( 350, 390 ) );
 
         clock.addClockListener( new ClockAdapter() {
             public void clockTicked( ClockEvent clockEvent ) {
