@@ -1,3 +1,4 @@
+9/13/11 adjust layout of "Two Atoms" play area, based on molecule location
 9/13/11 adjust layout of "Three Atoms" play area, based on molecule location
 9/13/11 use double arrows to indicate dragging direction for changing bond angle
 9/13/11 transform the shape of the bond angle indicator to point in the correct direction
